--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ergw-gtp-u-edp (1.0.0-1) unstable; urgency=medium
+
+  * fix erl_opts overwrites for gtp_u_edp and eradius
+
+ -- Andreas Schultz <aschultz@warp10.net>  Wed, 02 Nov 2016 14:11:57 +0100
+
 ergw-gtp-u-edp (1.0.0-0) unstable; urgency=medium
 
   * Initial Release.
