--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ergw-gtp-u-edp (1.1.0-1) unstable; urgency=medium
+
+  * support IPv6 as GTP transport
+
+ -- Andreas Schultz <aschultz@warp10.net>  Fri, 24 Mar 2017 12:12:30 +0100
+
 ergw-gtp-u-edp (1.0.0-1) unstable; urgency=medium
 
   * fix erl_opts overwrites for gtp_u_edp and eradius
