--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ergw-gtp-u-edp (1.2.0-1) zesty; urgency=medium
+
+  * add update_pdp_context method
+
+ -- Andreas Schultz <aschultz@warp10.net>  Thu, 27 Apr 2017 16:31:36 +0200
+
 ergw-gtp-u-edp (1.1.0-1) unstable; urgency=medium
 
   * support IPv6 as GTP transport
