--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,11 @@
-ergw-gtp-u-edp (1.3.0-1) UNRELEASED; urgency=medium
+ergw-gtp-u-edp (1.4.0-1) unstable; urgency=medium
+
+  * fix update_pdp_context method
+  * add metrics
+
+ -- Andreas Schultz <as@travelping.com>  Wed, 21 Jun 2017 10:30:58 +0200
+
+ergw-gtp-u-edp (1.3.0-1) unstable; urgency=medium
 
   * Clear DF bit
 
